# TS-THOR

./: README.md  install_thor2ts.sh  mapping_mode.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build-thor2ts.yml  code-quality-thor2ts.yml  release-thor2ts.yml  test-build-publish.yml
src/thor2timesketch/: __main__.py  constants.py  exceptions.py
src/thor2timesketch/cli/: controller.py
src/thor2timesketch/config/: console_config.py  default_filter.yaml  filter_audit.py  filter_creator.py  filter_findings.py  logger.py  thor2ts_filter.yaml  yaml_config_reader.py
src/thor2timesketch/input/: file_validator.py  json_reader.py  json_validator.py
src/thor2timesketch/mappers/: json_log_version.py  mapped_event.py  mapper_json_audit.py  mapper_json_audit_findings.py  mapper_json_audit_info.py  mapper_json_base.py  mapper_json_v1.py  mapper_json_v2.py  mapper_json_v3.py  mapper_loader.py
src/thor2timesketch/output/: file_writer.py  output_writer.py  ts_ingest.py
src/thor2timesketch/transformation/: filter_processor.py  json_pre_transformer.py  json_transformer.py  mapper_processor.py  pretransformation_processor.py  reader_processor.py
src/thor2timesketch/utils/: audit_events_extractor.py  audit_timestamp_extractor.py  datetime_field.py  json_flattener.py  normalizer.py  progress_bar.py  regex_timestamp_extractor.py  thor_finding_id.py  timestamp_extractor.py
tests/cli/: test_controller.py
tests/config/: test_filter_findings.py
tests/input/: test_file_validator.py  test_json_reader.py  test_json_validator.py
thor_ts_mapper/: __init__.py  __main__.py  constants.py  controller_cli.py  event_category.py  exceptions.py  file_validator.py  json_line_validator.py  json_validator.py  logger_config.py  progress_bar.py  thor_input_reader.py  thor_json_flattener.py  thor_json_log_version.py  thor_json_transformer.py  thor_mapper_json.py  thor_mapper_json_v2.py  thor_mapper_json_v3.py  thor_output_to_file.py  thor_output_to_ts.py  thor_output_writer.py  thor_timesketch_mapper.py  thor_timestamp_extractor.py
