[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thor2timesketch"
version = "0.1.2"
authors = [
  { name = "Ion Cicala (Nextron Systems GmbH)", email = "ion.cicala@nextron-systems.com" }
]
description = "Convert THOR security scanner logs to Timesketch format"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
keywords = ["thor", "timesketch", "mapper", "converter", "nextron"]
dependencies = [
  "timesketch_import_client",
  "python-dateutil",
  "typer",
  "rich"
]
packages = ["thor2timesketch"]

[project.urls]
Homepage = "tbd"
Issues = "tbd"

[project.scripts]
thor2ts = "thor2timesketch.__main__:main"

[tool.ruff]
line-length = 79
exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
ignore = []